hydroflow/tests/compile-fail/surface_forwardref_self3.stderr
error: Reached the recursion limit while resolving resolving name. Is the pipeline self-referential?
 --> tests/compile-fail/surface_forwardref_self3.rs:5:13
  |
5 |         f = f;
  |             ^

error: `for_each` must have exactly 1 input(s), actually has 0.
 --> tests/compile-fail/surface_forwardref_self3.rs:6:14
  |
6 |         f -> for_each(std::mem::drop);
  |              ^^^^^^^^^^^^^^^^^^^^^^^^
